@@ -1,3 +1,9 @@
+2005-10-06  Don Porter  <dgp@users.sourceforge.net>
+
+	[kennykb-numerics-branch]
+
+	* generic/tclExecute.c:	Improved performance of INST_RSHIFT.
+
 2005-10-05  Don Porter  <dgp@users.sourceforge.net>
 
 	[kennykb-numerics-branch]
